bugfixes, merge conflict fixes, refactoring